[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/model.gd" type="Script" id=1]
[ext_resource path="res://assets/search.svg" type="Texture" id=2]
[ext_resource path="res://assets/Roboto-Black.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://3.svg" type="Texture" id=4]
[ext_resource path="res://scripts/Menus.gd" type="Script" id=5]
[ext_resource path="res://scripts/Panes.gd" type="Script" id=6]
[ext_resource path="res://scripts/SamplesPane.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0

[node name="model" type="Node" parent="."]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.286275, 0.592157, 0.564706, 1 )

[node name="Logo" type="Control" parent="ColorRect"]
anchor_left = 0.02
anchor_top = 0.045
anchor_right = 0.02
anchor_bottom = 0.045
margin_left = 10.4
margin_top = -13.2
margin_right = 111.4
margin_bottom = 86.8

[node name="TextureRect" type="TextureRect" parent="ColorRect/Logo"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 4 )
expand = true
stretch_mode = 1

[node name="Menus" type="Control" parent="ColorRect"]
margin_left = 14.0
margin_top = 151.0
margin_right = 175.0
margin_bottom = 556.0

[node name="Menus" type="VBoxContainer" parent="ColorRect/Menus"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Samples" type="Button" parent="ColorRect/Menus/Menus"]
margin_right = 161.0
margin_bottom = 20.0
text = "Samples"

[node name="DataAnalysis" type="Button" parent="ColorRect/Menus/Menus"]
margin_top = 24.0
margin_right = 161.0
margin_bottom = 44.0
text = "Data Analysis"

[node name="DataAnalysisSubmenu" type="HBoxContainer" parent="ColorRect/Menus/Menus"]
visible = false
margin_top = 48.0
margin_right = 161.0
margin_bottom = 140.0

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/Menus/Menus/DataAnalysisSubmenu"]
margin_right = 10.0
margin_bottom = 92.0
rect_min_size = Vector2( 10, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/Menus/Menus/DataAnalysisSubmenu"]
margin_left = 14.0
margin_right = 161.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( -244, -85 )
size_flags_horizontal = 3

[node name="DataAnalysisProcess" type="Button" parent="ColorRect/Menus/Menus/DataAnalysisSubmenu/VBoxContainer"]
margin_right = 147.0
margin_bottom = 20.0
text = "Process"

[node name="DataAnalysisRefine" type="Button" parent="ColorRect/Menus/Menus/DataAnalysisSubmenu/VBoxContainer"]
margin_top = 24.0
margin_right = 147.0
margin_bottom = 44.0
text = "Refine"

[node name="DataAnalysisFitLigands" type="Button" parent="ColorRect/Menus/Menus/DataAnalysisSubmenu/VBoxContainer"]
margin_top = 48.0
margin_right = 147.0
margin_bottom = 68.0
text = "Fit Ligands"

[node name="DataAnalysisPandda" type="Button" parent="ColorRect/Menus/Menus/DataAnalysisSubmenu/VBoxContainer"]
margin_top = 72.0
margin_right = 147.0
margin_bottom = 92.0
text = "PanDDA"

[node name="PanDDA" type="Button" parent="ColorRect/Menus/Menus"]
margin_top = 48.0
margin_right = 161.0
margin_bottom = 68.0
text = "PanDDA"

[node name="PanDDASubmenu" type="HBoxContainer" parent="ColorRect/Menus/Menus"]
visible = false
margin_top = 140.0
margin_right = 98.0
margin_bottom = 184.0

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/Menus/Menus/PanDDASubmenu"]
margin_right = 10.0
margin_bottom = 44.0
rect_min_size = Vector2( 10, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/Menus/Menus/PanDDASubmenu"]
margin_left = 14.0
margin_right = 98.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( -244, -85 )
size_flags_horizontal = 3

[node name="PanddaAnalyse" type="Button" parent="ColorRect/Menus/Menus/PanDDASubmenu/VBoxContainer"]
margin_right = 84.0
margin_bottom = 20.0
text = "Analyse"

[node name="PanddaInspect" type="Button" parent="ColorRect/Menus/Menus/PanDDASubmenu/VBoxContainer"]
margin_top = 24.0
margin_right = 84.0
margin_bottom = 44.0
text = "Inspect"

[node name="Project" type="Button" parent="ColorRect/Menus/Menus"]
margin_top = 72.0
margin_right = 161.0
margin_bottom = 92.0
text = "Project"

[node name="ProjectSubmenu" type="HBoxContainer" parent="ColorRect/Menus/Menus"]
visible = false
margin_top = 96.0
margin_right = 161.0
margin_bottom = 188.0

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/Menus/Menus/ProjectSubmenu"]
margin_right = 10.0
margin_bottom = 92.0
rect_min_size = Vector2( 10, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/Menus/Menus/ProjectSubmenu"]
margin_left = 14.0
margin_right = 161.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( -244, -85 )
size_flags_horizontal = 3

[node name="ProjectPDBs" type="Button" parent="ColorRect/Menus/Menus/ProjectSubmenu/VBoxContainer"]
margin_top = 24.0
margin_right = 147.0
margin_bottom = 44.0
text = "PDBs"

[node name="ProjectDetails" type="Button" parent="ColorRect/Menus/Menus/ProjectSubmenu/VBoxContainer"]
margin_top = 48.0
margin_right = 147.0
margin_bottom = 68.0
text = "Details"

[node name="ProjectSettings" type="Button" parent="ColorRect/Menus/Menus/ProjectSubmenu/VBoxContainer"]
margin_top = 72.0
margin_right = 147.0
margin_bottom = 92.0
text = "Settings"

[node name="Libraries" type="Button" parent="ColorRect/Menus/Menus"]
margin_top = 96.0
margin_right = 161.0
margin_bottom = 116.0
text = "Libraries"

[node name="JobsStatus" type="Button" parent="ColorRect/Menus/Menus"]
margin_top = 120.0
margin_right = 161.0
margin_bottom = 140.0
text = "Jobs Status"

[node name="Logout" type="Button" parent="ColorRect/Menus/Menus"]
margin_top = 144.0
margin_right = 161.0
margin_bottom = 164.0
text = "Logout"

[node name="Panes" type="Control" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 306.0
margin_top = 152.0
margin_right = -12.0
margin_bottom = -15.0
script = ExtResource( 6 )

[node name="Samples" type="VBoxContainer" parent="ColorRect/Panes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="Headers" type="HBoxContainer" parent="ColorRect/Panes/Samples"]
margin_right = 962.0
margin_bottom = 22.0

[node name="crystal" type="Label" parent="ColorRect/Panes/Samples/Headers"]
margin_right = 100.0
margin_bottom = 22.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = SubResource( 1 )
text = "crystal"

[node name="run" type="Label" parent="ColorRect/Panes/Samples/Headers"]
margin_left = 104.0
margin_right = 136.0
margin_bottom = 22.0
rect_min_size = Vector2( 32, 0 )
custom_fonts/font = SubResource( 1 )
text = "run"

[node name="processing" type="Label" parent="ColorRect/Panes/Samples/Headers"]
margin_left = 140.0
margin_right = 230.0
margin_bottom = 22.0
rect_min_size = Vector2( 90, 0 )
custom_fonts/font = SubResource( 1 )
text = "processing"

[node name="refinement" type="Label" parent="ColorRect/Panes/Samples/Headers"]
margin_left = 234.0
margin_right = 325.0
margin_bottom = 22.0
rect_min_size = Vector2( 90, 0 )
custom_fonts/font = SubResource( 1 )
text = "refinement"

[node name="resolution" type="Label" parent="ColorRect/Panes/Samples/Headers"]
margin_left = 329.0
margin_right = 419.0
margin_bottom = 22.0
rect_min_size = Vector2( 90, 0 )
custom_fonts/font = SubResource( 1 )
text = "resolution"

[node name="picture" type="Label" parent="ColorRect/Panes/Samples/Headers"]
margin_left = 423.0
margin_right = 483.0
margin_bottom = 22.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = SubResource( 1 )
text = "picture"

[node name="dozer" type="Label" parent="ColorRect/Panes/Samples/Headers"]
margin_left = 487.0
margin_right = 533.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = "dozer"

[node name="DataAnalysisProcess" type="VBoxContainer" parent="ColorRect/Panes"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SamplesHeader" type="HBoxContainer" parent="ColorRect/Panes/DataAnalysisProcess"]
margin_right = 962.0
margin_bottom = 20.0

[node name="expand" type="Button" parent="ColorRect/Panes/DataAnalysisProcess/SamplesHeader"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 0 )
text = "+"

[node name="Label" type="Label" parent="ColorRect/Panes/DataAnalysisProcess/SamplesHeader"]
margin_left = 24.0
margin_top = 3.0
margin_right = 78.0
margin_bottom = 17.0
text = "Samples"

[node name="SpaceBuffer4" type="Control" parent="ColorRect/Panes/DataAnalysisProcess"]
margin_top = 24.0
margin_right = 962.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 8 )

[node name="SamplesSelection" type="HBoxContainer" parent="ColorRect/Panes/DataAnalysisProcess"]
margin_top = 36.0
margin_right = 962.0
margin_bottom = 61.0

[node name="CheckBox" type="CheckBox" parent="ColorRect/Panes/DataAnalysisProcess/SamplesSelection"]
margin_right = 24.0
margin_bottom = 25.0

[node name="Control" type="Control" parent="ColorRect/Panes/DataAnalysisProcess/SamplesSelection"]
margin_left = 28.0
margin_right = 60.0
margin_bottom = 25.0
rect_min_size = Vector2( 32, 25 )

[node name="TextureRect" type="TextureRect" parent="ColorRect/Panes/DataAnalysisProcess/SamplesSelection/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 2 )
expand = true
flip_h = true

[node name="LineEdit" type="LineEdit" parent="ColorRect/Panes/DataAnalysisProcess/SamplesSelection"]
margin_left = 64.0
margin_right = 160.0
margin_bottom = 25.0
rect_min_size = Vector2( 96, 0 )

[node name="OptionButton" type="OptionButton" parent="ColorRect/Panes/DataAnalysisProcess/SamplesSelection"]
margin_left = 164.0
margin_right = 249.0
margin_bottom = 25.0
text = "sessions"

[node name="OptionButton3" type="OptionButton" parent="ColorRect/Panes/DataAnalysisProcess/SamplesSelection"]
margin_left = 253.0
margin_right = 307.0
margin_bottom = 25.0
text = "tool"

[node name="OptionButton2" type="OptionButton" parent="ColorRect/Panes/DataAnalysisProcess/SamplesSelection"]
margin_left = 311.0
margin_right = 379.0
margin_bottom = 25.0
text = "status"

[node name="SamplesRow" type="HBoxContainer" parent="ColorRect/Panes/DataAnalysisProcess"]
margin_top = 65.0
margin_right = 962.0
margin_bottom = 89.0

[node name="CheckBox" type="CheckBox" parent="ColorRect/Panes/DataAnalysisProcess/SamplesRow"]
margin_right = 24.0
margin_bottom = 24.0

[node name="crystal" type="Label" parent="ColorRect/Panes/DataAnalysisProcess/SamplesRow"]
margin_left = 28.0
margin_top = 5.0
margin_right = 128.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "MtCM-x0083"

[node name="run" type="Label" parent="ColorRect/Panes/DataAnalysisProcess/SamplesRow"]
margin_left = 132.0
margin_top = 5.0
margin_right = 164.0
margin_bottom = 19.0
rect_min_size = Vector2( 32, 0 )
text = "1"

[node name="session" type="Label" parent="ColorRect/Panes/DataAnalysisProcess/SamplesRow"]
margin_left = 168.0
margin_top = 5.0
margin_right = 248.0
margin_bottom = 19.0
rect_min_size = Vector2( 80, 0 )
text = "20231234"

[node name="tool" type="Label" parent="ColorRect/Panes/DataAnalysisProcess/SamplesRow"]
margin_left = 252.0
margin_top = 5.0
margin_right = 342.0
margin_bottom = 19.0
rect_min_size = Vector2( 90, 0 )
text = "XDSAPP"

[node name="SpaceBuffer" type="Control" parent="ColorRect/Panes/DataAnalysisProcess"]
margin_top = 93.0
margin_right = 962.0
margin_bottom = 113.0
rect_min_size = Vector2( 0, 20 )

[node name="ProcessingHeader" type="HBoxContainer" parent="ColorRect/Panes/DataAnalysisProcess"]
margin_top = 117.0
margin_right = 962.0
margin_bottom = 137.0

[node name="expand" type="Button" parent="ColorRect/Panes/DataAnalysisProcess/ProcessingHeader"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 0 )
text = "+"

[node name="Label" type="Label" parent="ColorRect/Panes/DataAnalysisProcess/ProcessingHeader"]
margin_left = 24.0
margin_top = 3.0
margin_right = 93.0
margin_bottom = 17.0
text = "Processing"

[node name="SpaceBuffer2" type="Control" parent="ColorRect/Panes/DataAnalysisProcess"]
margin_top = 141.0
margin_right = 962.0
margin_bottom = 149.0
rect_min_size = Vector2( 0, 8 )

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/Panes/DataAnalysisProcess"]
margin_top = 153.0
margin_right = 962.0
margin_bottom = 173.0

[node name="SpaceBuffer" type="Control" parent="ColorRect/Panes/DataAnalysisProcess/HBoxContainer"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 0 )

[node name="Label" type="Label" parent="ColorRect/Panes/DataAnalysisProcess/HBoxContainer"]
margin_left = 24.0
margin_top = 3.0
margin_right = 154.0
margin_bottom = 17.0
rect_min_size = Vector2( 130, 0 )
text = "Process with:"

[node name="OptionButton" type="OptionButton" parent="ColorRect/Panes/DataAnalysisProcess/HBoxContainer"]
margin_left = 158.0
margin_right = 237.0
margin_bottom = 20.0
text = "XDSAPP"

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/Panes/DataAnalysisProcess"]
margin_top = 177.0
margin_right = 962.0
margin_bottom = 197.0

[node name="SpaceBuffer" type="Control" parent="ColorRect/Panes/DataAnalysisProcess/HBoxContainer2"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 0 )

[node name="Label" type="Label" parent="ColorRect/Panes/DataAnalysisProcess/HBoxContainer2"]
margin_left = 24.0
margin_top = 3.0
margin_right = 154.0
margin_bottom = 17.0
rect_min_size = Vector2( 130, 0 )
text = "Space group:"

[node name="Button" type="Button" parent="ColorRect/Panes/DataAnalysisProcess/HBoxContainer2"]
margin_left = 158.0
margin_right = 198.0
margin_bottom = 20.0
text = "auto"

[node name="HBoxContainer3" type="HBoxContainer" parent="ColorRect/Panes/DataAnalysisProcess"]
margin_top = 201.0
margin_right = 962.0
margin_bottom = 221.0

[node name="SpaceBuffer" type="Control" parent="ColorRect/Panes/DataAnalysisProcess/HBoxContainer3"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 0 )

[node name="Label" type="Label" parent="ColorRect/Panes/DataAnalysisProcess/HBoxContainer3"]
margin_left = 24.0
margin_top = 3.0
margin_right = 154.0
margin_bottom = 17.0
rect_min_size = Vector2( 130, 0 )
text = "Cell parameters"

[node name="Button" type="Button" parent="ColorRect/Panes/DataAnalysisProcess/HBoxContainer3"]
margin_left = 158.0
margin_right = 198.0
margin_bottom = 20.0
text = "auto"

[node name="HBoxContainer4" type="HBoxContainer" parent="ColorRect/Panes/DataAnalysisProcess"]
margin_top = 225.0
margin_right = 962.0
margin_bottom = 249.0

[node name="SpaceBuffer" type="Control" parent="ColorRect/Panes/DataAnalysisProcess/HBoxContainer4"]
margin_right = 20.0
margin_bottom = 24.0
rect_min_size = Vector2( 20, 0 )

[node name="Label" type="Label" parent="ColorRect/Panes/DataAnalysisProcess/HBoxContainer4"]
margin_left = 24.0
margin_top = 5.0
margin_right = 154.0
margin_bottom = 19.0
rect_min_size = Vector2( 130, 0 )
text = "Custom parameters"

[node name="LineEdit" type="LineEdit" parent="ColorRect/Panes/DataAnalysisProcess/HBoxContainer4"]
margin_left = 158.0
margin_right = 378.0
margin_bottom = 24.0
rect_min_size = Vector2( 220, 0 )

[node name="SpaceBuffer3" type="Control" parent="ColorRect/Panes/DataAnalysisProcess"]
margin_top = 253.0
margin_right = 962.0
margin_bottom = 283.0
rect_min_size = Vector2( 0, 30 )

[node name="HBoxContainer5" type="HBoxContainer" parent="ColorRect/Panes/DataAnalysisProcess"]
margin_top = 287.0
margin_right = 962.0
margin_bottom = 307.0

[node name="Button" type="Button" parent="ColorRect/Panes/DataAnalysisProcess/HBoxContainer5"]
margin_right = 122.0
margin_bottom = 20.0
grow_horizontal = 2
text = "Process Datasets"

[node name="DataAnalysisRefine" type="CenterContainer" parent="ColorRect/Panes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/Panes/DataAnalysisRefine"]
margin_left = 431.0
margin_top = 376.0
margin_right = 531.0
margin_bottom = 416.0
rect_min_size = Vector2( 100, 40 )
bbcode_enabled = true
bbcode_text = "[center] [color=#8ff]Data Analysis Refine[/color] is selected.[/center]"
text = " Data Analysis Refine is selected."
scroll_active = false

[node name="DataAnalysisFitLigands" type="CenterContainer" parent="ColorRect/Panes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/Panes/DataAnalysisFitLigands"]
margin_left = 421.0
margin_top = 366.0
margin_right = 541.0
margin_bottom = 426.0
rect_min_size = Vector2( 120, 60 )
bbcode_enabled = true
bbcode_text = "[center] [color=#8ff]Data Analysis Ligand Fit[/color] is selected.[/center]"
text = " Data Analysis Ligand Fit is selected."
scroll_active = false

[node name="DataAnalysisPandda" type="CenterContainer" parent="ColorRect/Panes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/Panes/DataAnalysisPandda"]
margin_left = 421.0
margin_top = 366.0
margin_right = 541.0
margin_bottom = 426.0
rect_min_size = Vector2( 120, 60 )
bbcode_enabled = true
bbcode_text = "[center] [color=#8ff]Data Analysis PanDDA[/color] is selected.[/center]"
text = " Data Analysis PanDDA is selected."
scroll_active = false

[node name="PanddaAnalyse" type="CenterContainer" parent="ColorRect/Panes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/Panes/PanddaAnalyse"]
margin_left = 431.0
margin_top = 376.0
margin_right = 531.0
margin_bottom = 416.0
rect_min_size = Vector2( 100, 40 )
bbcode_enabled = true
bbcode_text = "[center] [color=#8ff]PanDDA Analyse[/color] is selected.[/center]"
text = " PanDDA Analyse is selected."
scroll_active = false

[node name="PanddaInspect" type="CenterContainer" parent="ColorRect/Panes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/Panes/PanddaInspect"]
margin_left = 431.0
margin_top = 376.0
margin_right = 531.0
margin_bottom = 416.0
rect_min_size = Vector2( 100, 40 )
bbcode_enabled = true
bbcode_text = "[center] [color=#8ff]PanDDA Inspect[/color] is selected.[/center]"
text = " PanDDA Inspect is selected."
scroll_active = false

[node name="ProjectPDBs" type="CenterContainer" parent="ColorRect/Panes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/Panes/ProjectPDBs"]
margin_left = 431.0
margin_top = 376.0
margin_right = 531.0
margin_bottom = 416.0
rect_min_size = Vector2( 100, 40 )
bbcode_enabled = true
bbcode_text = "[center] [color=#8ff]Project PDBs[/color] is selected.[/center]"
text = " Project PDBs is selected."
scroll_active = false

[node name="ProjectDetails" type="CenterContainer" parent="ColorRect/Panes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/Panes/ProjectDetails"]
margin_left = 431.0
margin_top = 376.0
margin_right = 531.0
margin_bottom = 416.0
rect_min_size = Vector2( 100, 40 )
bbcode_enabled = true
bbcode_text = "[center] [color=#8ff]Project Details[/color] is selected.[/center]"
text = " Project Details is selected."
scroll_active = false

[node name="ProjectSettings" type="CenterContainer" parent="ColorRect/Panes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/Panes/ProjectSettings"]
margin_left = 431.0
margin_top = 376.0
margin_right = 531.0
margin_bottom = 416.0
rect_min_size = Vector2( 100, 40 )
bbcode_enabled = true
bbcode_text = "[center] [color=#8ff]Project Settings[/color] is selected.[/center]"
text = " Project Settings is selected."
scroll_active = false

[node name="Libraries" type="CenterContainer" parent="ColorRect/Panes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/Panes/Libraries"]
margin_left = 431.0
margin_top = 376.0
margin_right = 531.0
margin_bottom = 416.0
rect_min_size = Vector2( 100, 40 )
bbcode_enabled = true
bbcode_text = "[center] [color=#8ff]Libraries[/color] is selected.[/center]"
text = " Libraries is selected."
scroll_active = false

[node name="JobsStatus" type="CenterContainer" parent="ColorRect/Panes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/Panes/JobsStatus"]
margin_left = 431.0
margin_top = 376.0
margin_right = 531.0
margin_bottom = 416.0
rect_min_size = Vector2( 100, 40 )
bbcode_enabled = true
bbcode_text = "[center] [color=#8ff]Job Status[/color] is selected.[/center]"
text = " Job Status is selected."
scroll_active = false
